# django-compression-middleware

./: pyproject.toml
.github/workflows/: main.yml
