[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-compression-middleware"
dynamic = ["version"]
description = "Django middleware to compress responses using several algorithms."
readme = {"file" = "README.rst", "content-type" = "text/x-rst"}
license = "MPL-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Friedel Wolff", email = "friedel@translate.org.za" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # "Topic :: Internet :: WWW/HTTP :: ASGI :: Middleware",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
]
dependencies = [
    "Django",
    "zstandard",
    "Brotli; implementation_name == 'cpython'",
    "brotlipy; implementation_name == 'pypy'"
]

[project.urls]
Homepage = "https://github.com/friedelwolff/django-compression-middleware"

[tool.hatch.version]
path = "compression_middleware/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/compression_middleware",
    "/tests",
]

[tool.hatch.build.targets.wheel]
include = [
    "/compression_middleware",
    "/tests",
]

[tool.hatch.metadata]
license-files = { paths = ["LICENSE"] }

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pytest-sugar"
]
randomize = true
matrix-name-format = "{variable}-{value}"

# Django 3.2 LTS
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "pypy3.8", "pypy3.9", "pypy3.10"]
django = ["3.2"]

# Django 4.0
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "pypy3.8", "pypy3.9", "pypy3.10"]
django = ["4.0"]

# Django 4.1
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "pypy3.8", "pypy3.9", "pypy3.10"]
django = ["4.1"]

# Django 4.2
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy3.8", "pypy3.9", "pypy3.10"]
django = ["4.2"]

# Django 5.0
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "pypy3.10"]
django = ["5.0"]

# Django 5.1
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "pypy3.10"]
django = ["5.1"]

[tool.hatch.envs.hatch-test.overrides]
matrix.django.dependencies = [
  { if = ["3.2"], value = "Django>=3.2,<4.0" },
  { if = ["4.0"], value = "Django>=4.0,<4.1" },
  { if = ["4.1"], value = "Django>=4.1,<4.2" },
  { if = ["4.2"], value = "Django>=4.2,<4.3" },
  { if = ["5.0"], value = "Django>=5.0,<5.1" },
  { if = ["5.1"], value = "Django>=5.1,<5.2" },
]

# [tool.hatch.envs.hatch-test.scripts]
# run = [
#     "pip list --verbose",
#     "pytest{env:HATCH_TEST_ARGS:} {args}"
# ]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    "venv*",
]
python_files = ["test_*.py"]
addopts = [
    "tests/",
    "--verbose",
    "--color=yes",
    "--showlocals"
]